@@ -1,0 +1,41 @@
+Metadata-Version: 2.0
+Name: openturns
+Version: @PACKAGE_VERSION@
+Summary: Uncertainty treatment library
+Home-page:  http://www.openturns.org
+Author: OpenTURNS Developers
+Author-email: users@openturns.org
+License: LGPL
+Keywords: probability reliability sensitivity metamodel
+Platform: any
+Classifier: Development Status :: 4 - Beta
+Classifier: License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
+Classifier: Operating System :: Microsoft :: Windows
+Classifier: Operating System :: MacOS :: MacOS X
+Classifier: Operating System :: POSIX :: Linux
+Classifier: Programming Language :: C++
+Classifier: Programming Language :: Python
+Classifier: Programming Language :: Python :: 3
+Classifier: Programming Language :: Python :: 3.3
+Classifier: Programming Language :: Python :: 3.4
+Classifier: Programming Language :: Python :: 3.5
+Classifier: Programming Language :: Python :: 3.6
+Classifier: Programming Language :: Python :: 3.7
+Classifier: Programming Language :: Python :: 2
+Classifier: Programming Language :: Python :: 2.7
+Classifier: Topic :: Scientific/Engineering :: Information Analysis
+Classifier: Topic :: Scientific/Engineering :: Mathematics
+Classifier: Topic :: Scientific/Engineering :: Physics
+Classifier: Topic :: Software Development :: Libraries
+Classifier: Topic :: Software Development :: Libraries :: Python Modules
+Classifier: Intended Audience :: Developers
+Classifier: Intended Audience :: Financial and Insurance Industry
+Classifier: Intended Audience :: Information Technology
+Classifier: Intended Audience :: Science/Research
+
+OpenTURNS is a scientific C++ and Python library including an internal data model and algorithms
+dedicated to the treatment of uncertainties. The main goal of this library is giving
+to specific applications all the functionalities needed to treat uncertainties in studies.
+Targeted users are all engineers who want to introduce the probabilistic dimension
+in their so far deterministic studies. 
+
