@@ -1,0 +1,4 @@
+Wheel-Version: 1.0
+Generator: custom
+Root-Is-Purelib: false
+Tag: @WHEEL_TAG@
